# python-standalone-gui-template

./: .coveragerc  .dev.env  .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .sonar.env  ADDITIONAL.md  Dockerfile  Dockerfile-test  Makefile  Python_GUI.postman_collection.json  README.md  Taskfile.yml  compose.yaml  dev.env  dump.txt  env.thorough  filebeat.yml  gui_setup.py  main.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup_docker_from_scratch.bat  setup_local_project_from_scratch.bat  setup_project_from_scratch.bat  sonar-project.properties  standalone_build.bat  thorough.env
app/: app.py  application.py
app/helpers/: io_file.py  style_loader.py
app/ui/: main_window.py  warning_dialog.py
app/ui/auto_generated/: replace_generated.bat  replace_generated.sh
app/ui/forms/: main_window.ui
app/ui/themes/: main_theme.qss
collections/: Linux.postman_environment.json  Python_GUI.postman_collection.json  Python_GUI.postman_collection_linux.json  Python_GUI_API.postman_collection.json  Python_GUI_UI.postman_collection.json
collections/environments/: Windows.postman_environment.json
collections/environments_API/: API_Linux.postman_environment.json  API_Windows.postman_environment.json
collections/environments_UI/: Panel_UI_Dev_Windows.postman_environment.json  Panel_UI_Linux.postman_environment.json  Panel_UI_Native_Windows.postman_environment.json  Panel_UI_Windows.postman_environment.json  React_UI_Dev_Windows.postman_environment.json  React_UI_Linux.postman_environment.json  React_UI_Native_Windows.postman_environment.json  React_UI_Windows.postman_environment.json  UI_Linux.postman_environment.json  UI_Native_Windows.postman_environment.json  UI_Windows.postman_environment.json
referential/: Final_report.csv  Original_report.csv  Regex_list.txt
scripts/: format_and_lint.ps1  standalone_build_linux.spec  standalone_build_windows.spec
src/: __init__.py  api_runner.py  application.py  dump.txt  gui_setup.py  main.py  node_setup.py  pyside_setup.py  settings.py
src/api/: api_runner.py  app.py  dump.txt  models.py  routes.py  time_client.py  time_providers.py
src/app/: application.py
src/app/weather-forecast/: client.py  open_meteo.py
src/app/weather_forecast/: client.py  gather.py  params.py  parsers.py
src/config/: config.py  env.py  env_loader_mixin.py
src/helpers/: dump.txt  io_file.py  logging_setup.py  setup_logging.py  style_loader.py
src/helpers/config/: config.py  env_loader_mixin.py
src/panel_ui/: server.py  time_panel.py
src/pyside_ui/clock_widget/: __init__.py
src/pyside_ui/clock_widget/controller/: clock_controller.py
src/pyside_ui/clock_widget/model/: __init__.py  clock_angles.py
src/pyside_ui/dialog_windows/: draggable_dialog.py  main_window.py  warning_dialog.py
src/pyside_ui/forms/: warning_dialog.ui
src/ui/: __init__.py  clock_widget.py  draggable_dialog.py  draggable_main_window.py  draggable_mixin.py  main_window.py  warning_dialog.py
src/ui/clock_widget/: __init__.py  clock_pid.py  clock_widget.py  data_types.py  dump.txt  helpers.py  pid.py  tick_events.py
src/ui/dialog_windows/: main_window.py  warning_dialog.py
src/ui/forms/: files.qrc  main_window.ui
src/ui/panel_ui/: server.py  settings.py  time_panel.py
src/ui/pyside_ui/: __init__.py  bootstrap.py  tray_manager.py
src/ui/react_ui/: app.py  server.py
src/ui/setup_helpers/: pyside_setup.py
src/ui/shared/: helpers.py
standalone_build/: standalone_build.spec  standalone_build_linux.spec
tasks/: build_release.ps1  cleanup.ps1  dev_uv_environment.ps1  generate_diagrams.ps1  kibana_elastic.ps1  run_linux_application.ps1  run_windows_application.ps1  run_windows_dev_application.ps1  soncarqube.ps1  static_analysis_and_tests.ps1  test_linux_api.ps1  test_windows_api.ps1  wait_for_api.ps1  wait_for_linux_api.ps1
test/: conftest.py  dump.txt  test_app.py  test_application.py  test_clock_widget.py  test_gui_setup.py  test_node_setup.py  test_strategies.py  test_style_loader.py  test_tick_events_observer_pattern.py
test/api/: test_api.py
test/clock_widget/: __init__.py  test_classes.py  test_clock_widget.py  test_helpers.py  test_movement_strategies_pattern.py  test_tick_events_observer_pattern.py  test_widget.py
test/config/: test_config.py
test/helpers/: test_io_file.py  test_style_loader.py
test/panel_ui/: test_panel_ui.py
test/ui/: test_pyside_ui.py  test_ui.py
test/ui/panel_ui/: test_panel_ui.py
test/ui/pyside_ui/: test_pyside_ui.py  test_tray_manager.py
test/ui/react_ui/: test_api.py  test_react_ui.py
tests/: conftest.py  test_application.py  test_gui_setup.py  test_helpers.py  test_node_setup.py  test_pyside_setup.py
tests/api/: test_api.py
tests/app/: test_application.py
tests/app/weather_forecast/: test_weather.py  test_weather_forecast.py
tests/config/: test_config.py
tests/helpers/: test_io_file.py  test_logging.py  test_node_setup.py  test_pyside_setup.py
tests/helpers/config/: test_config.py
tests/ui/panel_ui/: test_panel_ui.py
tests/ui/pyside_ui/: test_application.py  test_bootstrap.py  test_draggable_windows.py  test_tray_manager.py
tests/ui/react_ui/: test_api.py  test_react_ui.py
tests/ui/setup_helpers/: test_node_setup.py  test_pyside_setup.py
tests/ui/shared/: test_helpers.py
(+107 files in other folders)
