[project]
name = "python-standalone-gui-template"
version = "1.0.0"
description = "Simple template project for Python Standalone GUI Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.16.0",
    "pyinstaller>=6.14.1",
    "pyside6>=6.9.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
]
